# wave-function-collapse

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.cfg
src/: cell.py  grid.py  img.py  main.py  queue_set.py  tile.py  vec2.py  wfc.py
wave_function_collapse/: cell.py  cli.py  grid.py  main.py
