[project]
name = "wave-function-collapse"
description = "Wave Function Collapse"
version = "0.0.1"
authors = [{ name = "Ben Gosney", email = "bengosney@googlemail.com" }]
dependencies = ["typer[all]"]

[project.optional-dependencies]
dev = ["black", "mypy", "pip-tools", "pre-commit"]

[project.scripts]
wave-function-collapse = "wave_function_collapse.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 128
target-version = ['py311']

[tool.pycln]
all = true
