[project]
name = "wave-function-collapse"
description = "Wave Function Collapse"
version = "0.0.1"
authors = [{ name = "Ben Gosney", email = "bengosney@googlemail.com" }]
dependencies = ["rich", "typer"]

[project.optional-dependencies]
dev = ["black", "mypy", "pip-tools", "pre-commit"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 128
target-version = ['py311']

[tool.pycln]
all = true

[project.scripts]
wave-function-collapse = "main:cli"
